# last_of_ants

./: CREDITS.md  Cargo.toml  build_wasm.sh  rust-toolchain.toml
.github/workflows/: release.yaml
assets/: Ant nest.ldtk  test1.ldtk  test2.ldtk
assets/shaders/: ant.wgsl  cocoon.wgsl
src/: lib.rs
src/components/: ants.rs  clues.rs  cocoons.rs  dead_ants.rs  entities.rs  mod.rs  nav_mesh.rs  object.rs  pheromon.rs  pheromon_source.rs  pheromones.rs  pheromons.rs  player.rs  tiles.rs  zombants.rs
src/components/ants/: dead_ants.rs  goal.rs  job.rs  live_ants.rs  movement.rs  position.rs  zombants.rs
src/components/ants/movement/: direction.rs  position.rs
src/components/pheromones/: concentrations.rs  gradients.rs  sources.rs
src/helpers/: mod.rs  render_world_inspector.rs
src/render/: mod.rs  player_animation.rs  render_ant.rs  render_cocoon.rs
src/resources/: clues.rs  mod.rs  nav_mesh_lut.rs
src/ui/: mod.rs  ui_clues.rs  win.rs
