[package]
name = "last_of_ants"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy_ecs_ldtk = "0.8.0"
bevy_ecs_tilemap = "0.12"
itertools = "0.12.0"
rand = "0.8.5"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/trouv/bevy_ecs_ldtk", branch = "feat/bevy-0.12" }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }

[[bin]]
name = "map_viewer"