[package]
name = "last_of_ants"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Improve release performances
[profile.release]
codegen-units = 1

[dependencies]
# bevy = "0.12.1"
bevy = { version = "0.12.1", features = ["file_watcher", "dynamic_linking"] } 
bevy-inspector-egui = "0.21.0"
bevy_ecs_ldtk = "0.8.0"
bevy_ecs_tilemap = "0.12"
bevy_framepace = "0.14.1"
bevy_rapier2d = { version = "0.23.0", features = ["wasm-bindgen"] }
itertools = "0.12.0"
rand = "0.8.5"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/trouv/bevy_ecs_ldtk", branch = "feat/bevy-0.12" }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }

[[bin]]
name = "map_viewer"

[[bin]]
name = "character_control"
